# Flask_market

./: pyproject.toml
market/: __init__.py  forms.py  market.db  models.py  routes.py
market/templates/: base.html  home.html  login.html  market.html  purshase.html  register.html
market/templates/includes/: modal.html
